--- a/Login---Register-trasparent-main/index.html
+++ b/Login---Register-trasparent-main/index.html
@@ -23,10 +23,10 @@
         </h2>
         <!--da qui in poi ce il menu con il bottone-->
         <nav class="navigation">
-            <a href="#" id="">Casa XD</a>
-            <a href="#" id="">Ma chi sono</a>
-            <a href="#" id="">Servizietto?</a>
-            <a href="#" id="">Non contattami</a>
+            <a href="#" id="">Casa</a>
+            <a href="#" id="">Chi sono</a>
+            <a href="#" id="">Servizi?</a>
+            <a href="#" id="">Contattami</a>
             <button class="btnLogin-popup">Accedi</button>
         </nav>
     </header>
